@@ -1,5 +1,6 @@
 package com.example.mate.service;
 
+import java.util.Objects;
 import java.util.Optional;
 import com.example.auth.repository.UserProviderRepository;
 import com.example.auth.repository.UserRepository;
@@ -20,8 +21,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
+import java.security.Principal;
 import java.util.List;
+import java.util.Locale;
 import java.util.stream.Collectors;
+import org.springframework.lang.NonNull;
 
 @Service
 @RequiredArgsConstructor
@@ -36,48 +40,39 @@ public class PartyService {
     private final com.example.profile.storage.service.ProfileImageService profileImageService;
 
     @Transactional
-    public PartyDTO.Response createParty(PartyDTO.Request request) {
+    public PartyDTO.Response createParty(@NonNull PartyDTO.Request request, Principal principal) {
+        Long hostId = getUserIdFromPrincipal(principal);
 
         // 본인인증(소셜 연동) 여부 확인
-        boolean isSocialVerified = userProviderRepository.findByUserId(request.getHostId()).stream()
+        boolean isSocialVerified = userProviderRepository.findByUserId(hostId).stream()
                 .anyMatch(p -> "kakao".equalsIgnoreCase(p.getProvider()) || "naver".equalsIgnoreCase(p.getProvider()));
         if (!isSocialVerified) {
             throw new com.example.common.exception.IdentityVerificationRequiredException(
                     "메이트를 생성하려면 카카오 또는 네이버 계정 연동이 필요합니다.");
         }
 
-        String hostProfileImageUrl = null;
-        String hostFavoriteTeam = null;
+        // 사용자 정보에서 profileImageUrl, favoriteTeam 가져오기
+        var userInfo = userRepository.findById(hostId)
+                .map(user -> {
+                    String imageUrl = user.getProfileImageUrl();
+                    // blob URL 또는 data URL 등은 null로 처리하여 나중에 resolver에서 처리되도록 유도
+                    if (imageUrl != null && isLegacyOrInvalidProfileValue(imageUrl)) {
+                        imageUrl = null;
+                    }
+                    return new String[] { imageUrl, user.getFavoriteTeamId() };
+                })
+                .orElse(new String[] { null, null });
 
-        try {
-            // 사용자 정보에서 favoriteTeam도 가져오기
-            var userInfo = userRepository.findById(request.getHostId())
-                    .map(user -> {
-                        String imageUrl = user.getProfileImageUrl();
+        String hostProfileImageUrl = userInfo[0];
+        String hostFavoriteTeam = userInfo[1];
 
-                        // blob URL은 무시
-                        if (imageUrl != null && imageUrl.startsWith("blob:")) {
-                            imageUrl = null;
-                        }
-                        String favoriteTeamId = user.getFavoriteTeamId();
-
-                        return new Object[] { imageUrl, favoriteTeamId };
-                    })
-                    .orElse(new Object[] { null, null });
-
-            hostProfileImageUrl = (String) userInfo[0];
-            hostFavoriteTeam = (String) userInfo[1]; // favoriteTeam 저장
-
-        } catch (Exception e) {
-            log.error("호스트 정보 조회 실패: {}", e.getMessage());
-        }
         Party party = Party.builder()
-                .hostId(request.getHostId())
+                .hostId(hostId)
                 .hostName(request.getHostName())
-                .hostProfileImageUrl(hostProfileImageUrl) // 변환된 URL 사용
+                .hostProfileImageUrl(hostProfileImageUrl)
                 .hostFavoriteTeam(hostFavoriteTeam)
-                .hostBadge(request.getHostBadge() != null ? request.getHostBadge() : Party.BadgeType.NEW)
-                .hostRating(request.getHostRating() != null ? request.getHostRating() : 5.0)
+                .hostBadge(Optional.ofNullable(request.getHostBadge()).orElse(Party.BadgeType.NEW))
+                .hostRating(Optional.ofNullable(request.getHostRating()).orElse(5.0))
                 .teamId(request.getTeamId())
                 .gameDate(request.getGameDate())
                 .gameTime(request.getGameTime())
@@ -88,6 +83,13 @@ public class PartyService {
                 .maxParticipants(request.getMaxParticipants())
                 .currentParticipants(1) // 호스트 포함
                 .description(request.getDescription())
+                .searchText(buildSearchText(
+                        request.getStadium(),
+                        request.getHomeTeam(),
+                        request.getAwayTeam(),
+                        request.getSection(),
+                        request.getHostName(),
+                        request.getDescription()))
                 .ticketVerified(request.getTicketImageUrl() != null)
                 .ticketImageUrl(request.getTicketImageUrl())
                 .ticketPrice(request.getTicketPrice())
@@ -97,24 +99,26 @@ public class PartyService {
 
         Party savedParty = partyRepository.save(party);
 
-        return convertToDto(savedParty);
+        return Objects.requireNonNull(convertToDto(savedParty));
     }
 
     // 모든 파티 조회 (검색 및 필터링 통합)
     @Transactional(readOnly = true)
     public Page<PartyDTO.Response> getAllParties(String teamId, String stadium, LocalDate gameDate, String searchQuery,
-            Pageable pageable) {
+            Pageable pageable, Party.PartyStatus status) {
         String normalizedTeamId = TeamCodeNormalizer.normalize(teamId);
+        String normalizedSearchQuery = normalizeSearchQuery(searchQuery);
 
         List<Party.PartyStatus> excludedStatuses = List.of(
                 Party.PartyStatus.CHECKED_IN,
                 Party.PartyStatus.COMPLETED);
 
         // 빈 문자열을 null로 변환하여 쿼리에서 무시되도록 함
+        if (stadium != null) {
+            stadium = stadium.trim();
+        }
         if (stadium != null && stadium.isBlank())
             stadium = null;
-        if (searchQuery != null && searchQuery.isBlank())
-            searchQuery = null;
         if (normalizedTeamId != null && normalizedTeamId.isBlank())
             normalizedTeamId = null;
 
@@ -122,19 +126,20 @@ public class PartyService {
                 normalizedTeamId,
                 stadium,
                 gameDate,
-                searchQuery,
+                normalizedSearchQuery,
                 excludedStatuses,
+                status,
                 pageable);
 
-        return parties.map(this::convertToDto);
+        return Objects.requireNonNull(parties.map(this::convertToDto));
     }
 
     // 파티 ID로 조회
     @Transactional(readOnly = true)
-    public PartyDTO.Response getPartyById(Long id) {
+    public PartyDTO.Response getPartyById(@NonNull Long id) {
         Party party = partyRepository.findById(id)
                 .orElseThrow(() -> new PartyNotFoundException(id));
-        return convertToDto(party);
+        return Objects.requireNonNull(convertToDto(party));
     }
 
     // 상태별 파티 조회
@@ -172,9 +177,16 @@ public class PartyService {
 
     // 파티 업데이트
     @Transactional
-    public PartyDTO.Response updateParty(Long id, PartyDTO.UpdateRequest request) {
+    public PartyDTO.Response updateParty(@NonNull Long id, @NonNull PartyDTO.UpdateRequest request,
+            Principal principal) {
+        Long requesterId = getUserIdFromPrincipal(principal);
         Party party = partyRepository.findById(id)
                 .orElseThrow(() -> new PartyNotFoundException(id));
+
+        // 호스트 본인 확인
+        if (!party.getHostId().equals(requesterId)) {
+            throw new UnauthorizedAccessException("파티 호스트만 수정할 수 있습니다.");
+        }
 
         boolean hasApprovedApplications = applicationRepository.countByPartyIdAndIsApprovedTrue(id) > 0;
 
@@ -210,13 +222,21 @@ public class PartyService {
                     "승인된 참여자가 있거나 모집 중 상태가 아닌 경우 가격/좌석/인원을 변경할 수 없습니다.");
         }
 
+        party.setSearchText(buildSearchText(
+                party.getStadium(),
+                party.getHomeTeam(),
+                party.getAwayTeam(),
+                party.getSection(),
+                party.getHostName(),
+                party.getDescription()));
+
         Party updatedParty = partyRepository.save(party);
-        return convertToDto(updatedParty);
+        return Objects.requireNonNull(convertToDto(updatedParty));
     }
 
     // 파티 참여 인원 증가
     @Transactional
-    public PartyDTO.Response incrementParticipants(Long id) {
+    public PartyDTO.Response incrementParticipants(@NonNull Long id) {
         Party party = partyRepository.findById(id)
                 .orElseThrow(() -> new PartyNotFoundException(id));
 
@@ -232,12 +252,12 @@ public class PartyService {
         }
 
         Party updatedParty = partyRepository.save(party);
-        return convertToDto(updatedParty);
+        return Objects.requireNonNull(convertToDto(updatedParty));
     }
 
     // 파티 참여 인원 감소
     @Transactional
-    public PartyDTO.Response decrementParticipants(Long id) {
+    public PartyDTO.Response decrementParticipants(@NonNull Long id) {
         Party party = partyRepository.findById(id)
                 .orElseThrow(() -> new PartyNotFoundException(id));
 
@@ -249,16 +269,17 @@ public class PartyService {
         party.setStatus(Party.PartyStatus.PENDING);
 
         Party updatedParty = partyRepository.save(party);
-        return convertToDto(updatedParty);
+        return Objects.requireNonNull(convertToDto(updatedParty));
     }
 
     @Transactional
-    public void deleteParty(Long id, Long hostId) {
+    public void deleteParty(@NonNull Long id, Principal principal) {
+        Long requesterId = getUserIdFromPrincipal(principal);
         Party party = partyRepository.findById(id)
                 .orElseThrow(() -> new PartyNotFoundException(id));
 
         // 호스트 본인 확인
-        if (!party.getHostId().equals(hostId)) {
+        if (!party.getHostId().equals(requesterId)) {
             throw new UnauthorizedAccessException("파티 호스트만 삭제할 수 있습니다.");
         }
 
@@ -278,26 +299,40 @@ public class PartyService {
         }
 
         // 대기 중인 신청들은 함께 삭제
-        applicationRepository.deleteAll(
-                applicationRepository.findByPartyId(id));
+        List<PartyApplication> applicationsToDelete = applicationRepository.findByPartyId(id);
+        if (applicationsToDelete != null) {
+            applicationRepository.deleteAll(applicationsToDelete);
+        }
 
         partyRepository.delete(party);
     }
 
     // 사용자가 참여한 모든 파티 조회 (호스트 + 참여자)
     @Transactional(readOnly = true)
+    public List<PartyDTO.Response> getMyParties(Principal principal) {
+        return getMyParties(getUserIdFromPrincipal(principal));
+    }
+
+    @Transactional(readOnly = true)
     public List<PartyDTO.Response> getMyParties(Long userId) {
+        if (userId == null) {
+            throw new UnauthorizedAccessException("인증 정보가 없습니다.");
+        }
+
         // 1. 호스트로 생성한 파티
         List<Party> hostedParties = partyRepository.findByHostId(userId);
 
         // 2. 참여자로 승인된 파티
-        List<PartyApplication> approvedApplications = applicationRepository.findByApplicantIdAndIsApprovedTrue(userId);
+        List<PartyApplication> approvedApplications = applicationRepository
+                .findByApplicantIdAndIsApprovedTrue(userId);
 
-        List<Party> participatedParties = approvedApplications.stream()
-                .map(app -> partyRepository.findById(app.getPartyId()))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .collect(Collectors.toList());
+        List<Long> partyIds = approvedApplications.stream()
+                .map(PartyApplication::getPartyId)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+
+        List<Party> participatedParties = partyRepository.findAllById(partyIds);
 
         // 3. 두 리스트 합치기 (중복 제거)
         List<Party> allParties = new java.util.ArrayList<>(hostedParties);
@@ -320,7 +355,7 @@ public class PartyService {
 
         return allParties.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -439,10 +474,98 @@ public class PartyService {
     }
 
     private PartyDTO.Response convertToDto(Party party) {
+        if (party == null)
+            return null;
+
         PartyDTO.Response response = PartyDTO.Response.from(party);
-        // hostProfileImageUrl이 path인 경우 URL로 변환
-        String resolvedUrl = profileImageService.getProfileImageUrl(party.getHostProfileImageUrl());
+        String profilePathOrUrl = party.getHostProfileImageUrl();
+
+        // 파티엔 있는데 만약 무효한 값이거나 비어있다면 DB에서 다시 조회 (fallback)
+        if (isLegacyOrInvalidProfileValue(profilePathOrUrl)) {
+            profilePathOrUrl = userRepository.findProfileImageUrlById(party.getHostId())
+                    .filter(this::isUsableProfileValue)
+                    .orElse(null);
+        }
+
+        // 호스트의 최종 결정된 profilePathOrUrl이 path 형태인 경우 최종적으로 URL로 변환
+        String resolvedUrl = profileImageService.getProfileImageUrl(profilePathOrUrl);
         response.setHostProfileImageUrl(resolvedUrl);
-        return response;
+
+        return Objects.requireNonNull(response);
+    }
+
+    private String normalizeSearchQuery(String searchQuery) {
+        if (searchQuery == null) {
+            return "";
+        }
+        return searchQuery.trim();
+    }
+
+    private String buildSearchText(
+            String stadium,
+            String homeTeam,
+            String awayTeam,
+            String section,
+            String hostName,
+            String description) {
+        return String.join(" ",
+                normalizedSearchToken(stadium),
+                normalizedSearchToken(homeTeam),
+                normalizedSearchToken(awayTeam),
+                normalizedSearchToken(section),
+                normalizedSearchToken(hostName),
+                normalizedSearchToken(description)).trim();
+    }
+
+    private String normalizedSearchToken(String value) {
+        if (value == null) {
+            return "";
+        }
+        return value.trim().toLowerCase(Locale.ROOT);
+    }
+
+    private boolean isLegacyOrInvalidProfileValue(String profilePathOrUrl) {
+        if (profilePathOrUrl == null || profilePathOrUrl.isBlank()) {
+            return false;
+        }
+        return profilePathOrUrl.startsWith("/assets/")
+                || profilePathOrUrl.startsWith("/src/assets/")
+                || profilePathOrUrl.startsWith("blob:")
+                || profilePathOrUrl.startsWith("data:");
+    }
+
+    private boolean isUsableProfileValue(String profilePathOrUrl) {
+        if (profilePathOrUrl == null || profilePathOrUrl.isBlank()) {
+            return false;
+        }
+        return !isLegacyOrInvalidProfileValue(profilePathOrUrl);
+    }
+
+    private Long getUserIdFromPrincipal(Principal principal) {
+        if (principal == null) {
+            throw new UnauthorizedAccessException("인증 정보가 없습니다.");
+        }
+        String principalName = principal.getName();
+
+        if (principalName == null || principalName.isBlank()) {
+            throw new UnauthorizedAccessException("인증 정보가 없습니다.");
+        }
+
+        // 1) 신규 인증 구조(일반적으로 userId)를 우선 처리
+        try {
+            Long principalId = Long.valueOf(principalName);
+            return userRepository.findById(principalId)
+                    .map(com.example.auth.entity.UserEntity::getId)
+                    .orElseGet(() ->
+                    // 2) 기존 구조(이메일) 호환 - 숫자로 보이지만 ID가 아닌 경우
+                    userRepository.findByEmail(principalName)
+                            .map(com.example.auth.entity.UserEntity::getId)
+                            .orElseThrow(() -> new UnauthorizedAccessException("사용자를 찾을 수 없습니다.")));
+        } catch (NumberFormatException e) {
+            // 2) 기존 구조(이메일) 호환
+            return userRepository.findByEmail(principalName)
+                    .map(com.example.auth.entity.UserEntity::getId)
+                    .orElseThrow(() -> new UnauthorizedAccessException("사용자를 찾을 수 없습니다."));
+        }
     }
 }
